--- a/cycle/src/main/webapp/index.html
+++ b/cycle/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>camunda fox cycle</title>
+    <title>camunda cycle</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="refresh" content="0;URL='app/secured/view/index'">
     
